@@ -3,19 +3,19 @@ package test.java.com.titusfortner.deep_dive.demo.pages;
 import org.openqa.selenium.By;
 import org.openqa.selenium.TimeoutException;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
 import test.java.com.titusfortner.deep_dive.demo.data.User;
+import test.java.com.titusfortner.deep_dive.demo.elements.Element;
+import test.java.com.titusfortner.deep_dive.demo.elements.ElementList;
 
-import java.util.List;
 import java.util.function.Function;
 
 public class HomePage extends BasePage {
     public static final String URL = "https://www.saucedemo.com/";
 
-    private final By usernameTextfield = By.cssSelector("input[data-test='username']");
-    private final By passwordTextfield = By.cssSelector("input[data-test='password']");
-    private final By loginButton = By.cssSelector("input[data-test='login-button']");
-    private final By errorElement = By.cssSelector("[data-test=error]");
+    private final Element usernameTextfield = new Element(driver, By.cssSelector("input[data-test='username']"));
+    private final Element passwordTextfield = new Element(driver, By.cssSelector("input[data-test='password']"));
+    private final Element loginButton = new Element(driver, By.cssSelector("input[data-test='login-button']"));
+    private final ElementList errorElements = new ElementList(driver, By.cssSelector("[data-test=error]"));
 
     public static HomePage visit(WebDriver driver) {
         HomePage homePage = new HomePage(driver);
@@ -31,7 +31,7 @@ public class HomePage extends BasePage {
         login(user);
 
         try {
-            wait.until((Function<WebDriver, Object>) driver -> !driver.findElements(errorElement).isEmpty());
+            errorElements.waitUntilPresent();
         } catch (TimeoutException ex) {
             String url = driver.getCurrentUrl();
             throw new PageValidationException("Expected login errors, but none were found; current URL: " + url);
@@ -48,15 +48,14 @@ public class HomePage extends BasePage {
         try {
             wait.until((Function<WebDriver, Object>) driver -> !URL.equals(driver.getCurrentUrl()));
         } catch (TimeoutException ex) {
-            List<WebElement> errors = driver.findElements(errorElement);
-            String additional = errors.isEmpty() ? "" : " found error: " + errors.get(0).getText();
+            String additional = errorElements.isEmpty() ? "" : " found error: " + errorElements.getFirst().getText();
             throw new PageValidationException("User is not logged in;" + additional);
         }
     }
 
     private void login(User user) {
-        sendKeys(usernameTextfield, user.getUsername());
-        sendKeys(passwordTextfield, user.getPassword());
-        click(loginButton);
+        usernameTextfield.sendKeys(user.getUsername());
+        passwordTextfield.sendKeys(user.getPassword());
+        loginButton.click();
     }
 }
